# yue.nicholas@gmail.com

ADD_EXECUTABLE ( eLut eLut.cpp )

ADD_CUSTOM_COMMAND (
  TARGET eLut POST_BUILD
  COMMAND eLut > ${CMAKE_CURRENT_BINARY_DIR}/eLut.h
  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
)
SET_SOURCE_FILES_PROPERTIES(
  ${CMAKE_CURRENT_BINARY_DIR}/eLut.h
  PROPERTIES HEADER_FILE_ONLY TRUE
  )

ADD_EXECUTABLE ( toFloat toFloat.cpp )
ADD_CUSTOM_COMMAND (
  TARGET toFloat POST_BUILD
  COMMAND toFloat > ${CMAKE_CURRENT_BINARY_DIR}/toFloat.h
  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
)
SET_SOURCE_FILES_PROPERTIES(
  ${CMAKE_CURRENT_BINARY_DIR}/toFloat.h
  PROPERTIES HEADER_FILE_ONLY TRUE
  )

SET_SOURCE_FILES_PROPERTIES(
  half.cpp
  PROPERTIES
  OBJECT_DEPENDS
  ${CMAKE_CURRENT_BINARY_DIR}/eLut.h
  OBJECT_DEPENDS
  ${CMAKE_CURRENT_BINARY_DIR}/toFloat.h
  )

IF(BUILD_SHARED_LIBS)
    ADD_DEFINITIONS(-DHALF_EXPORTS)
ENDIF()

ADD_LIBRARY ( Half ${LIB_TYPE}
  half.cpp
  )

# Packaging lib and includes
POST_COPY ( Half ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR} Half.dll ${CMAKE_BINARY_DIR}/lib )
POST_COPY ( Half ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR} Half.lib ${CMAKE_BINARY_DIR}/lib )
POST_COPY ( Half ${CMAKE_CURRENT_SOURCE_DIR} *.h "${CMAKE_BINARY_DIR}/include" )

ADD_DEPENDENCIES ( Half toFloat eLut )

INSTALL ( TARGETS
  Half
  DESTINATION
  lib
)

INSTALL ( FILES 
  half.h
  halfFunction.h
  halfExport.h
  halfLimits.h
  DESTINATION
  include/OpenEXR
)
